<resources>

    <string name="app_in_name">Library</string>
    <string name="app_name_after">Book library App</string>
    <string name="app_in_name1">BAA App Company</string>
    <string name="app_in_name2">BAA App Company</string>
    <string name="app_name_after1">Here you can add new information</string>
    <string name="app_name_after2">We show you the best places on our Earth</string>
    <string name="app_name_after_map">Jana App</string>
    <string name="text_bottom">Sign in to your account</string>
    <string name="text_bottom_map">Welcome to my app!</string>
    <string name="btn_SignIn">Sign in</string>
    <string name="btn_Register">Register</string>
    <string name="btn_Quit">Quit</string>
    <string name="btn_Add">Add new information</string>
    <string name="app_name">Library</string>
    <string name="todo">TODO</string>
    <string name="delete_all">Delete All</string>
</resources>