<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:id="@+id/root_element"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/suez_one"
            android:gravity="center_horizontal"
            android:text="@string/app_in_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="33dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/montserrat"
            android:gravity="center_horizontal"
            android:text="@string/app_name_after"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="111dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/suez_one"
            android:gravity="center_horizontal"
            android:text="@string/app_in_name1"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="33dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/montserrat"
            android:gravity="center_horizontal"
            android:text="@string/app_name_after1"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="111dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_bottom"
        android:layout_margin="150dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="2">



        <Button
            android:id="@+id/btnAdd"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"



            android:layout_weight="1"
            android:backgroundTint="@color/btn_Add"
            android:fontFamily="serif"
            android:text="@string/btn_Add"
            android:textColor="@color/white"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_bottom"
        android:layout_margin="30dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <Button
            android:id="@+id/btnQuit"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="center"

            android:layout_weight="2"
            android:backgroundTint="@color/btn_quit"
            android:fontFamily="serif"
            android:text="@string/btn_Quit"
            android:textColor="@color/white"
            app:backgroundTint="#6C2323"
            tools:ignore="RtlHardcoded" />


    </LinearLayout>

    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"

        android:text="@string/text_bottom_map"
        android:textAlignment="center"
        android:textColor="@color/text_bottom"
        android:textSize="15sp"
        android:gravity="center_horizontal" />

</RelativeLayout>